fourm page replay button jump fixed

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -890,6 +890,7 @@ margin-right: 10px;
 .view-display-id-stream_forum_page.posts-columns.columns-full .row .footer .links.inline{
    float: right;
    display: inline-block;
+   height:40px;
    margin-top: 6px; 
    @include breakpoint($mobile) {
      float:none;
